argocd/external-services/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-svc-overseerr
spec:
  type: ExternalName
  externalName: truenas.bowmans.site
  ports:
    - port: 30023
