argocd/external-services/overseerr/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ext-ingress-route-overseerr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`overseerr.bowmans.site`)
      kind: Rule
      services:
      - name: ext-svc-overseerr
        port: 30023
      middlewares:
        - name: kube-system-private-ips-allow@kubernetescrd
  tls:
    secretName: ext-cert-overseerr
